# miniPythonLexer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh
src/: CMakeLists.txt  scan.l
test/: error.py  test.py
